<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cities.CitiesFragment">

    <LinearLayout
        android:id="@+id/row_city"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_city_minus_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_minus_3" />

        <Button
            android:id="@+id/btn_city_minus_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_minus_1" />

        <LinearLayout
            android:layout_width="162dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_city_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_placeholder"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_city_dices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_placeholder"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_remove_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_remove_all" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_city_plus_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_plus_1" />

        <Button
            android:id="@+id/btn_city_plus_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_plus_3" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_btn_default_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_default_color" />

        <RadioButton
            android:id="@+id/radio_btn_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_red" />

        <RadioButton
            android:id="@+id/radio_btn_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_blue" />

        <RadioButton
            android:id="@+id/radio_btn_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_yellow" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>