<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/row_city"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_city_minus_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_minus_3" />

        <Button
            android:id="@+id/btn_city_minus_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_minus_1" />

        <LinearLayout
            android:layout_width="162dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_city_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_placeholder"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_city_dices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_placeholder"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_remove_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_remove_all" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_city_plus_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_plus_1" />

        <Button
            android:id="@+id/btn_city_plus_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_plus_3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>