<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cities">

    <fragment
        android:id="@+id/navigation_cities"
        android:name="de.mdrone.pandemic_companion.ui.cities.CitiesFragment"
        android:label="@string/title_cities"
        tools:layout="@layout/fragment_cities" />

    <fragment
        android:id="@+id/navigation_medicine"
        android:name="de.mdrone.pandemic_companion.ui.medicine.MedicineFragment"
        android:label="@string/title_medicine"
        tools:layout="@layout/fragment_medicine" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="de.mdrone.pandemic_companion.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>